--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@parcel/watcher": "^2.5.1",
     "@storybook/nextjs": "^8.6.8",
     "@storybook/react": "^8.6.8",
+    "@tanstack/eslint-plugin-query": "^5.86.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
